[tool.poetry]
name = "dcarte"
version = "0.3.1"
description = "DCARTE is a dataset ingestion tool from DCARTE UK-DRI CAre Research & 
TEchnology. As of currently, it is the simplest way to have access to the ongoing
data gathered by the UKDRI-CRT project as well as the legacy data created by the TIHM project.
Dr. Eyal Soreq developed the platform to integrate data-driven analysis across a wide 
range of data fields (e.g. IoT, behavioral, physiological, etc.). 
The UKDRI-CRT project seeks to improve our knowledge of the many behavioural symptoms
of dementia and how they are represented in objective continuous measurements. 
This module can be used on either the Imperial College London RDS cluster or on a local 
computer running Python >3.9, depending on your needs."
authors = ["eyal soreq <eyal.soreq@ukdri.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyarrow = ">=3.0.0,<6.0.0"
pandas = "^1.3.5"
numpy = "^1.21.5"
requests = "^2.26.0"
ipython = "^7.30.1"
ipykernel = "^6.6.0"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"
tqdm = "^4.62.3"
ipywidgets = "^7.6.5"
jupyter = "^1.0.0"
lab = "^7.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^8.3.6"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-mermaid = "^0.7.1"
commonmark = "^0.9.1"
recommonmark = "^0.7.1"
Sphinx = "^4.3.2"
sphinxcontrib-napoleon = "^0.7"
myst-parser = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
