[tool.poetry]
name = "dcarte"
version = "0.3.10"
description = "DCARTE is a dataset ingestion tool from DCARTE UK-DRI CAre Research and TEchnology"
authors = ["eyal soreq"]
documentation = "https://esoreq.github.io/dcarte/_build/html/index.html"
repository = "https://github.com/esoreq/dcarte"


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyarrow = ">=3.0.0,<6.0.0"
pandas = "^1.3.5"
numpy = "^1.21.5"
requests = "^2.26.0"
ipython = "^7.30.1"
ipykernel = "^6.6.0"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"
tqdm = "^4.62.3"
ipywidgets = "^7.6.5"
jupyter = "^1.0.0"
lab = "^7.0"
scipy = "^1.7.3"
widgetsnbextension = "^3.5.2"
jupyterlab = "^3.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^8.3.6"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-mermaid = "^0.7.1"
commonmark = "^0.9.1"
recommonmark = "^0.7.1"
Sphinx = "^4.3.2"
sphinxcontrib-napoleon = "^0.7"
myst-parser = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
